# airflow-pipeline

./: .gitignore
bundles/: pyproject.toml
bundles/feature_branch_bundle/: __init__.py  ast_rewrite.py  git_bundle.py  git_cli.py
bundles/tests/: test_ast_rewrite.py  test_git_cli.py
dags/: feature_shared_import.py  metrics_test_dag.py  metrics_test_dag2.py
dags/metrics_test2/: dag_metrics_test2.py
dags/new_pipeline/: dag_new_pipeline.py
dags/premium/: dag_premium.py
dags/premium/common_utils/: runtime_variable.py
dags/shared_import_demo/: dag_shared_import_demo.py
dags/talk/: premium.py  talkserver.py  talkserver_dev.py
deploy/: airflow.Dockerfile  helmfile.yaml
deploy/argocd/: root-app.yaml
deploy/argocd/apps/: airflow.yaml  prometheus.yaml  statsd-exporter.yaml  victoriametrics.yaml  vmagent.yaml
deploy/bundle-sync/: bundle-sync.yaml
deploy/dag-clone/: dag-clone.yaml
deploy/values/: airflow.yaml  prometheus.yaml  statsd.yaml  victoriametrics.yaml  vmagent.yaml
docker/airflow/: Dockerfile
docs/blog/: helm-and-argocd.md
helm_charts/airflow/: Chart.yaml
helm_charts/airflow/values/: airflow.yaml
helm_charts/argocd/: root-app.yaml
helm_charts/argocd/apps/: airflow.yaml  bundle-sync.yaml  dag-clone.yaml  monitoring.yaml  vmagent.yaml
helm_charts/argocd/values/: argocd.yaml
helm_charts/victoriametrics/values/: victoriametrics.yaml
helm_charts/vmagent/: Chart.yaml
k8s_config/: kustomization.yaml  victoriametrics.yaml  vmagent-values.yaml  vmagent.yaml
scripts/common_utils/: runtime_variable.py
(+4 files in other folders)
